[package]
name = "bevy-ratatui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0",  default-features = true}
ratatui = { path = "/Users/kisaczka/Desktop/ww/ratatui",  default-features = false, features = ["bevy"] }
